# bevy_simple_preferences

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: egui.rs  primary_window.rs
src/: lib.rs  map.rs  param.rs  plugin.rs  reflect_map.rs  registry.rs  resource.rs  serializable_map.rs
src/storage/: fs.rs  gloo.rs  mod.rs
tests/: plugin.rs
tests/utils/: mod.rs
