[package]
name = "bevy_simple_preferences"
version = "0.0.1-dev"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[dependencies]
serde = { version = "1.0" }
thiserror = "1.0"
bevy = { version = "0.14", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml = "0.8"
tempfile = "3.10"
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "multi_threaded",
    "bevy_render",
    "bevy_winit",
    "webgl2",
    "x11"
] }
bevy-inspector-egui = { version = "0.25", default-features = false, features = ["bevy_render"] }
egui = { version = "0.28", features = ["persistence"] }
serde_json = "1.0"
rand = "0.8"
serde_test = "1.0"
serde_assert = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
